force-app/main/default/objects/LAD_Task_Of_Laddaw_Account_Onboarding__mdt/LAD_Task_Of_Laddaw_Account_Onboarding__mdt.object-meta.xml
<CustomObject>
    <label>Task of Laddaw Account Onboarding</label>
    <pluralLabel>Task of Laddaw Account Onboarding</pluralLabel>
</CustomObject>