force-app/main/default/objects/LAD_Task_Of_Laddaw_Account_Onboarding__mdt/fields/LAD_Task_Assigned_to__c.field-meta.xml
<CustomField>
    <fullName>LAD_Task_Assigned_to__c</fullName>
    <label>Task Assigned to</label>
    <length>100</length>
    <type>Text</type>
</CustomField>