force-app/main/default/objects/LAD_Task_Of_Laddaw_Account_Onboarding__mdt/fields/LAD_Task_Category__c.field-meta.xml
<CustomField>
    <fullName>LAD_Task_Category__c</fullName>
    <label>Task Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>