force-app/main/default/objects/LAD_Task_Of_Laddaw_Account_Onboarding__mdt/fields/LAD_Task_Description__c.field-meta.xml
<CustomField>
    <fullName>LAD_Task_Description__c</fullName>
    <label>Task Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>