force-app/main/default/objects/LAD_Task_Of_Laddaw_Account_Onboarding__mdt/fields/LAD_Task_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>LAD_Task_Due_Date__c</fullName>
    <defaultValue>7</defaultValue>
    <label>Task Due Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>