force-app/main/default/objects/LAD_Task_Of_Laddaw_Account_Onboarding__mdt/fields/LAD_Task_Reason__c.field-meta.xml
<CustomField>
    <fullName>LAD_Task_Reason__c</fullName>
    <label>Task Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial Account data verification</fullName>
                <default>true</default>
                <label>Initial Account data verification</label>
            </value>
            <value>
                <fullName>New Account allocation</fullName>
            </value>
            <value>
                <fullName>Commercial Setup</fullName>
            </value>
            <value>
                <fullName>Buyer Account approval</fullName>
            </value>
            <value>
                <fullName>Post enablement actions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>