force-app/main/default/objects/LAD_Task_Of_Laddaw_Account_Onboarding__mdt/fields/LAD_Task_Type__c.field-meta.xml
<CustomField>
    <fullName>LAD_Task_Type__c</fullName>
    <label>Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Laddaw Account Onboarding</fullName>
                <default>true</default>
                <label>Laddaw Account Onboarding</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>